--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../css/snake.css">
 
-    <script type="text/javascript" src="../js/jquery-2.1.1.js"></script>
-    <script type="text/javascript" src="../js/snake.js"></script>
-    <script type="text/javascript" src="../js/snake-view.js"></script>
+    <script type="text/javascript" src="./js/jquery-2.1.1.js"></script>
+    <script type="text/javascript" src="./js/snake.js"></script>
+    <script type="text/javascript" src="./js/snake-view.js"></script>
 
 
   </head>
