--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 </div>
 
 <div class="me-info">
-  <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAWvAAAAJGY3MmQxZjY4LTU1ZjAtNGI0Yi05NDA3LWEzZTA3NzQzNDI2Ng.jpg"/>
+  <img src=""/>
 
   <h2>SNAKE</h2>
   <p>
